--- a/contacts.html
+++ b/contacts.html
@@ -13,7 +13,7 @@
         <a href="contacts.html">Контакти</a>
     </p>
 
-    <h1>Як нас знайти</h1>
+    <h1>Як нас знайти:</h1>
     <p>Адреса: м. Київ, вул. Квіткова 1</p>
     <p>Телефон: +380 99 999 99 99</p>
     <p>Email: rosea@example.com</p>
