--- a/contacts.html
+++ b/contacts.html
@@ -2,20 +2,27 @@
 <html lang="uk">
 <head>
     <meta charset="UTF-8">
-    <title>Контакти</title>
+    <title>Rosea - Контакти</title>
     <meta name="author" content="Клименко Богдана">
 </head>
-<body>
-    <p>
-        <a href="index.html">Головна</a> |
-        <a href="catalog.html">Каталог</a> |
-        <a href="about.html">Про нас</a> |
+<body bgcolor="#FFF0F5" text="#333333">
+
+    <h2 align="center">🌸 Зв'яжіться з нами 🌸</h2>
+    
+    <p align="center">
+        <a href="index.html">Головна</a> | 
+        <a href="catalog.html">Каталог</a> | 
+        <a href="about.html">Про нас</a> | 
         <a href="contacts.html">Контакти</a>
     </p>
+    <hr width="80%">
+    
+    <center>
+        <h3>Ми завжди раді допомогти!</h3>
+        <p><b>Телефон:</b> +380 99 123 45 67</p>
+        <p><b>Email:</b> hello@rosea.ua</p>
+        <p><b>Адреса:</b> м. Київ, вул. Політехнічна</p>
+    </center>
 
-    <h1>Як нас знайти:</h1>
-    <p>Адреса: м. Київ, вул. Квіткова 1</p>
-    <p>Телефон: +380 99 999 99 99</p>
-    <p>Email: rosea@example.com</p>
 </body>
 </html>
