--- a/contacts.html
+++ b/contacts.html
@@ -7,7 +7,7 @@
 </head>
 <body bgcolor="#FFF0F5" text="#333333">
 
-    <h2 align="center">🌸 Зв'яжіться з нами 🌸</h2>
+    <h2 align="center"> Зв'яжіться з нами </h2>
     
     <p align="center">
         <a href="index.html">Головна</a> | 
