--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 </head>
 <body bgcolor="#FFF0F5" text="#333333">
 
-    <h2 align="center">🌸 Про магазин 🌸</h2>
+    <h2 align="center"> Про магазин </h2>
     
     <p align="center">
         <a href="index.html">Головна</a> | 
