--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
 </head>
 <body bgcolor="#FFF0F5" text="#333333">
 
-    <h2 align="center">🌸 Каталог квітів 🌸</h2>
+    <h2 align="center"> Каталог квітів </h2>
     
     <p align="center">
         <a href="index.html">Головна</a> | 
